Made a new recipe page for chicken curry like other recipes added the link to this page in the index homepage

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html"> Lasagna</a>
-    <a href="recipes/tomato_soup.html"> Tomato Soup</a>
+    <a href="recipes/lasagna.html"> Lasagna </a>
+    <a href="recipes/tomato_soup.html"> Tomato Soup </a>
+    <a href="recipes/chicken_curry.html"> Chicken Curry </a>
 </body>
 </html>
