--- a/recipes/chicken_curry.html
+++ b/recipes/chicken_curry.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Chicken Curry</title>
+    <link rel="stylesheet" href="../stylesheet/styles.css">
 </head>
 <body>
     <h1>Chicken Curry Recipe</h1>
